--- a/SITE BARBEARIA/index.html
+++ b/SITE BARBEARIA/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>BARBEARIA ALURA</title>
 </head>
 <body>
     <header>
-        <h1 class="titulo-principal">Barbearia Alura</h1> 
+        |<div class="caixa">
+            <h1><img src="logo.png"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav>
+        </div> 
     </header>
     <img id="banner" src="banner.jpg">
     <div class="principal">
@@ -31,5 +41,9 @@
             </ul>
         <img src="beneficios.jpg" class="imagembeneficios">
     </div>
+    <footer>
+        <img src="logo-branco.png">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
+    </footer>
 </body>
 </html>
