--- a/SITE BARBEARIA/contato.html
+++ b/SITE BARBEARIA/contato.html
@@ -54,8 +54,31 @@
                 </fieldset>
                 <label class="checkbox"><input type="checkbox" checked> Gostaria de receber nossas novidades por email?</label>
 
-            <input type="submit" value="Enviar Formulário">
+            <input type="submit" value="Enviar Formulário" class="enviar">
         </form>
+        <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horário</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Segunda-Feira</td>
+                    <td>8hs ~ 20hs</td>
+                </tr>
+                <tr>
+                    <td>Quarta-Feira</td>
+                    <td>8hs ~ 20hs</td>
+                </tr>
+                <tr>
+                    <td>Sexta-Feira</td>
+                    <td>8hs ~ 20hs</td>
+                </tr> 
+            </tbody>  
+        </table>
+
     </main>
     <footer>
         <img src="logo-branco.png" alt="Logo da barbearia alura">
