--- a/SITE BARBEARIA/index.html
+++ b/SITE BARBEARIA/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style-home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <title>BARBEARIA ALURA</title>
 </head>
 <body>
@@ -21,26 +24,30 @@
             </nav>
         </div> 
     </header>
-    <img id="banner" src="banner.jpg">
-    <div class="principal">
-        <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+    <img class="banner" src="banner.jpg">
+    <main>
+        <section class="principal">
+            <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+            <img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro"
 
-        <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-        <p> profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-    </div>
-    <div class="beneficios">
-        <h3 class="titulo-centralizado">Benefícios</h3>
-            <ul>
-                <li class="itens">Atendimento aos Cliente</li> 
-                <li class="itens">Espaço diferenciado</li> 
-                <li class="itens">Localização</li> 
-                <li class="itens">Profissionais Qualificados</li> 
-            </ul>
-        <img src="beneficios.jpg" class="imagembeneficios">
-    </div>
+            <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+
+            <p> profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        </section>
+        <section class="beneficios">
+            <h3 class="titulo-principal">Benefícios</h3>
+                <ul>
+                    <li class="itens">Atendimento aos Cliente</li> 
+                    <li class="itens">Espaço diferenciado</li> 
+                    <li class="itens">Localização</li> 
+                    <li class="itens">Profissionais Qualificados</li> 
+                </ul>
+            <img src="beneficios.jpg" class="imagembeneficios">
+        </section>
+    </main>
     <footer>
         <img src="logo-branco.png">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
